03-gitapps/observability-stack/grafana-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-http-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
  - host: grafana.echesec.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: grafana
             port:
               number: 80
  tls:
  - hosts:
    - grafana.echesec.com
